# usage-dashboard

./: .gitignore  AGENTS.md  Dockerfile.client  Dockerfile.server  README.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  identifier-gate.yml
breadcrumbs/active/: BC-001-claude-login-cli-invalid-response.md
deploy/pi/: README.md  goodix-touch-rebind.service  goodix-touch-rebind.sh  install.sh  update.sh  usage-dashboard-gui.env.example  usage-dashboard-gui.service  usage-dashboard-redeploy  usage-dashboard-update.service  usage-dashboard-update.timer  usage-dashboard-xsession
docs/: spec.md  spec.yaml
githooks/: pre-commit
k8s/: namespace.yaml  server-deployment.yaml  server-ingress.yaml  server-pvc.yaml  server-schedules-configmap.yaml  server-secret.yaml  server-service.yaml
plans/: 001-claude-dedicated-oauth-login.md  002-backlight-sleep-schedule.md
reflections/: 2026-06-11-glm-5-1-r2.md  2026-06-11-glm-5-1.md  2026-06-21-glm-5-2.md  2026-07-05-glm-5-2.md
scripts/: check_committed_identifiers.py  install-git-hooks.sh
src/usage_dashboard/: cli.py
src/usage_dashboard/client/: backlight.py  brightness.py  diagnostics.py  fetcher.py  format.py  gui.py  layout.py  main.py  renderer.py  schedule.py
src/usage_dashboard/deploy/: redeploy.py
src/usage_dashboard/server/: api.py  db.py  fetch_claude.py  fetch_codex.py  fetch_ollama.py  fetch_types.py  fetch_umans.py  fetch_zai.py  main.py  schedule_config.py  scheduler.py  token_store.py
src/usage_dashboard/shared/: __init__.py  models.py
tests/: test_api.py  test_backlight.py  test_brightness.py  test_cli.py  test_db.py  test_diagnostics.py  test_fetcher.py  test_fetchers.py  test_format.py  test_gui.py  test_layout.py  test_main.py  test_models.py  test_redeploy.py  test_renderer.py  test_schedule.py  test_schedule_config.py  test_scheduler.py  test_token_store.py
