[project]
name = "usage-dashboard"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "hraedon" }]
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Touch GUI client for the Pi 4B + 5" display. Not pulled by the server image.
gui = [
    "pygame-ce>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
usage-dashboard = "usage_dashboard.cli:main"
usage-dashboard-gui = "usage_dashboard.client.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/usage_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["pygame", "pygame.*"]
ignore_missing_imports = true
