[project]
name = "usage-dashboard"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "hraedon" }]
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Browser automation for the interactive `usage-dashboard login ollama` flow.
# CLI-only: the server image does not install this. After installing, run
# `playwright install chromium` once to fetch the browser.
login = [
    "playwright>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
usage-dashboard = "usage_dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/usage_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# Optional CLI-only dependency; not present in the type-check environment.
module = "playwright.*"
ignore_missing_imports = true
